2007-07-28  Thomas Wood  <thos@gnome.org>

	* wp-cellrenderer.c: (cell_renderer_wallpaper_render): Don't draw the
	selection indicator if width is -1

2007-07-28  Thomas Wood  <thos@gnome.org>

	* wp-cellrenderer.c: (cell_renderer_wallpaper_render): c89 fix and add 1px
	border between selection indicator and contents

2007-07-28  Thomas Wood  <thos@gnome.org>

	* wp-cellrenderer.c: (cell_renderer_wallpaper_render): Use cairo to draw the
	cell renderer selection

2007-07-28  Jens Granseuer  <jensgr@gmx.net>

	* wp-cellrenderer.c: (cell_renderer_wallpaper_render):
	* wp-cellrenderer.h: fix cell renderer state logic to not be always on

2007-07-28  Thomas Wood  <thos@gnome.org>

	* theme-util.c: Add missing include

2007-07-27  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): constify drag'n'drop data, remove
	unused variable, use G_N_ELEMENTS where applicable

2007-07-27  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init, theme_postinit): remove workarounds
	for initialization problems in early versions of the capplet

2007-07-27  Denis Washington  <dwashington@gmx.net>

	* appearanc-themes.c: (appearance_window_drag_data_received_cb),
	(themes_init):
	Implement drag-and drop theme installation.

2007-07-27  Denis Washington  <dwashington@gmx.net>

	* data/cursor-*.pcf:
	* data/mouse-cursor-*.png:
	Cursor fonts and thumbnails moved from gnome-mouse-properties.

	* data/Makefile.am:
	Install the new files.

2007-07-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_string):
	* appearance-themes.c: (theme_load_from_gconf), (theme_is_equal):
	* theme-util.c: (theme_find_in_model):
	* theme-util.h: move some utility code over to common

2007-07-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_settings),
	(color_scheme_defaults_button_clicked_cb): really unset the gconf key
	when reverting colors

2007-07-26  Jens Granseuer  <jensgr@gmx.net>
